fixed validation for date picker. Added middleware to check user role

--- a/views/add_case.ejs
+++ b/views/add_case.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add New Case - Doctor Portal</title>
+    <title>Add New Case - Express Portal</title>
     <link rel="stylesheet" href="/assets/css/side_menu.css">
     <link rel="stylesheet" href="/assets/css/add_case.css">
     <link rel="stylesheet" href="/assets/css/date-picker.css">
