--- a/views/add_treatment_plan.ejs
+++ b/views/add_treatment_plan.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add Treatment Plan - Doctor Portal</title>
+    <title>Add Treatment Plan - Express Portal</title>
     <link rel="stylesheet" href="/assets/css/side_menu.css">
     <link rel="stylesheet" href="/assets/css/add_treatment_plan.css">
     <link rel="stylesheet" href="/assets/css/validation.css">
