--- a/views/simulation.ejs
+++ b/views/simulation.ejs
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/png" href="images/new_logo.png" />
     <script rel="javascript" src="../assets/js/jquery.js"></script>
-    <title>Treatment simulation</title>
+    <title>Treatment simulation - Express Portal</title>
     <style>
         html,
         body {
