--- a/views/aligners_cases.ejs
+++ b/views/aligners_cases.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aligners Cases - Doctor Portal</title>
+    <title>Aligners Cases - Express Portal</title>
     <link rel="stylesheet" href="/assets/css/side_menu.css">
     <link rel="stylesheet" href="/assets/css/aligners_cases.css">
     <link rel="stylesheet" href="/assets/css/toast.css">
