--- a/views/update_upload_stl.ejs
+++ b/views/update_upload_stl.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Upload STL - Doctor Portal</title>
+    <title>Update Upload STL - Express Portal</title>
     <link rel="stylesheet" href="/assets/css/side_menu.css">
     <link rel="stylesheet" href="/assets/css/add_case.css">
     <link rel="stylesheet" href="/assets/css/date-picker.css">
