--- a/views/upload_stl.ejs
+++ b/views/upload_stl.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Upload STL - Doctor Portal</title>
+    <title>Upload STL - Express Portal</title>
     <link rel="stylesheet" href="/assets/css/side_menu.css">
     <link rel="stylesheet" href="/assets/css/add_case.css">
     <link rel="stylesheet" href="/assets/css/date-picker.css">
@@ -59,7 +59,10 @@
                                 </div>
                             </div>
                             <div class="form-field">
-                                <label for="dateOfBirth">Date of Birth</label>
+                                <label for="dateOfBirth">
+                                    <span class="required-asterisk">*</span>
+                                    <span class="label-text">Date of Birth</span>
+                                </label>
                                 <input type="date" id="dateOfBirth" name="dateOfBirth" data-date-picker>
                             </div>
                             <div class="form-field">
@@ -349,6 +352,11 @@
                 field: 'patientName',
                 rule: 'required',
                 message: 'Name is required.'
+            },
+            {
+                field: 'dateOfBirth',
+                rule: 'required',
+                message: 'Date of Birth is required.'
             },
             {
                 field: 'treatmentBrand',
