--- a/views/user_details.ejs
+++ b/views/user_details.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>User Details - Doctor Portal</title>
+    <title>User Details - Express Portal</title>
     <link rel="stylesheet" href="/assets/css/side_menu.css">
     <link rel="stylesheet" href="/assets/css/user_details.css">
     <link rel="stylesheet" href="/assets/css/toast.css">
